# rs1brc

./: .gitignore  Cargo.toml  LICENSE
.cargo/: config.toml
src/: main.rs  map.rs  mmap.rs  parser.rs  temperature.rs  tokio.rs
