[package]
name = "rs1brc"
version = "0.1.0"
edition = "2021"

[dependencies]
memchr = "*"
mimalloc = { version = "*", default-features = false }
tokio = { version = "*", features = [
    "fs",
    "rt-multi-thread",
    "macros",
    "parking_lot",
] }
tokio-util = { version = "*", features = ["codec"] }
tokio-stream = { version = "*", default-features = false }
rayon = "*"
pretty_assertions = "*"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true

[features]
assert_result = []
