[package]
name = "rs1brc"
version = "0.1.0"
edition = "2024"

[dependencies]
memchr = "*"
rayon = "*"
mimalloc = { version = "*", default-features = false, optional = true }
tokio = { version = "*", features = [
    "fs",
    "rt-multi-thread",
    "macros",
    "parking_lot",
], optional = true }
tokio-util = { version = "*", features = ["codec"], optional = true }
tokio-stream = { version = "*", default-features = false, optional = true }
pretty_assertions = { version = "*", optional = true }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true

[features]
default = ["tokio", "branchless"]
mimalloc = ["dep:mimalloc"]
tokio = ["dep:tokio", "dep:tokio-util", "dep:tokio-stream"]
branchless = []
assert_result = ["dep:pretty_assertions"]
